# oli

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
extension/: README.md  content.js  manifest.json  package.json  popup.html  popup.js
native/: README.md
native/win-loopback/: Cargo.toml  README.md  index.cjs  package-lock.json  package.json
native/win-loopback/scripts/: postinstall.cjs
native/win-loopback/src/: lib.rs
src/main/: auto-update.ts  index.ts  menu.ts  secrets.ts  tray.ts  window-icon.ts
src/main/ask/: index.ts
src/main/audio/: capture.ts  recorder.ts  wav.ts
src/main/calendar/: autoRecord.ts  google.ts  ics.ts  icsFolderWatch.ts  icsParse.ts  icsSubscription.ts  outlook.ts  outlookCom.ts  poller.ts  repo.ts  subscriptions.ts
src/main/db/: repo.ts  schema.ts  settings.ts  structured.ts
src/main/diarization/: index.ts
src/main/embeddings/: index.ts
src/main/ipc/: ai.ts  calendar.ts  export.ts  extension.ts  llm.ts  meetings.ts  recording.ts  settings.ts  stt.ts
src/main/llm/: html-to-markdown.ts  openai-client.ts  providers.ts  templates.ts
src/main/server/: localServer.ts
src/main/stt/: groq.ts  index.ts
src/main/telemetry/: index.ts
src/main/whisper/: models.ts  streaming.ts  worker.ts
src/main/windows/: miniRecorder.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  index.html  main.tsx
src/renderer/audio/: capture.ts  pcm-worklet.ts  resample.ts  (+2 more)
src/shared/: types.ts
(+46 files in other folders)
