[package]
name = "oli-win-loopback"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Threading"
] }

[build-dependencies]
napi-build = "2"
